# toolBLEx

./: .gitignore  CMakeLists.txt  README.md  TODO.md  deploy_linux.sh  deploy_macos.sh  deploy_windows.sh  toolBLEx.pro
.github/: FUNDING.yml
.github/workflows/: builds_desktop.yml  builds_desktop_qmake.yml  flatpak.yml
assets/: COPYING  assets.qrc  icons.qrc  vendors.qrc
assets/linux/: toolBLEx.appdata.xml  toolBLEx.desktop  toolBLEx.flatpak.yml  toolblex.appdata.xml  toolblex.desktop  toolblex.flatpak.yml
assets/macos/: Info.plist  toolBLEx.icns  toolblex.icns
assets/vendors/: ble-manufacturer-ids.csv  ble-service-uuids.csv  mac-vendors.csv
assets/windows/: setup.nsi  toolBLEx.rc
docs/: BluetoothAdapters.md  InterestingFrequencyBands_2300_to_2600MHz.md  InterestingFrequencyBands_below_2200MHz.md  RtlSdr.md  UbertoothOne.md
i18n/: README.md  i18n.qrc  toolBLEx_en.qm  toolBLEx_en.ts  toolBLEx_fr.ts  toolBLEx_ru.ts
qml/: DesktopApplication.qml  DesktopHeader.qml  PanelDevice.qml  PanelDeviceAdvertisement.qml  PanelDeviceInfos.qml  PanelDeviceLog.qml  PanelDeviceServices.qml  PanelScanner.qml  ScreenAdvertiser.qml  ScreenBluetooth.qml  ScreenRtlSdr.qml  ScreenScanner.qml  ScreenSettings.qml  ScreenUbertooth.qml  ThemeEngine.qml  components.qrc  qml.qrc
qml/ComponentLibrary/: ThemeEngine.qml
qml/ComponentLibrary/complex/: FileInputArea.qml  TextField_FileDialog.qml  TextField_FolderDialog.qml
qml/ComponentLibrary/controls/: ComboBoxThemed.qml  ProgressBarThemed.qml  SliderThemed.qml  SliderValueSolid.qml  SpinBoxThemed_desktop.qml  TumblerThemed.qml
qml/ComponentLibrary/generic/: ButtonChip.qml  ButtonFab.qml  ButtonFabExtended.qml
qml/ComponentLibrary/maps/: MapButton.qml  MapButtonCompass.qml  MapButtonZoom.qml  MapFrameArea.qml
qml/ComponentLibrary/menus/: ActionMenuItem.qml  ActionMenu_bottom.qml  ListItem.qml
qml/ComponentLibrary/utils/: UtilsPath.js
qml/components/: AdapterWidget.qml  AdvertisementDataWidget.qml  AdvertisementDataWidgetAdvanced.qml  BleCharacteristicWidget.qml  BleServiceWidget.qml  ButtonScanMenu.qml  DeviceLogWidget.qml  DeviceScannerHeader.qml  DeviceScannerListHeader.qml  DeviceScannerListWidget.qml  DeviceScannerTableHeader.qml  DeviceScannerTableWidget.qml  DeviceScannerWidget.qml  FrequencyGraph.qml  FrequencyGraphLegend.qml  FrequencyGraphOverlayBands.qml  ItemActionTag.qml  ProximityRadar.qml  RssiBar.qml  RssiGraph.qml  SelectorMenuThemedItemBadge.qml  TextSelectable.qml  WarningNoAdapter.qml  WarningNoBluetooth.qml  WarningNoPermission.qml  WarningNotImplemented.qml
qml/components_generic/: ButtonText.qml  ButtonWireframe.qml  ButtonWireframeIcon.qml  ButtonWireframeIconCentered.qml  ItemTag.qml  MobileMenuItem_horizontal.qml  RoundButtonIcon.qml  TextField_FileDialog6.qml  TextField_FolderDialog6.qml
qml/components_js/: UtilsBluetooth.js  UtilsDeviceSensors.js  UtilsNumber.js
qml/components_themed/: ItemDelegateThemed.qml  RangeSliderThemed.qml  SelectorMenuThemed.qml  SelectorMenuThemedItem.qml  SliderThemed.qml  SpinBoxThemed.qml  SpinBoxThemed_desktop.qml  SpinBoxThemed_mobile.qml  TextAreaThemed.qml  TextFieldPathThemed.qml  TextFieldThemed.qml
qml/graphs/: FrequencyGraph.qml  FrequencyGraphLegend.qml  FrequencyGraphOverlayBands.qml  FrequencyGraphOverlayClickable.qml  PhosphorPersistenceGraph.qml  ProximityRadar.qml  RssiBar.qml  SpectrumGraph2D.qml  SpectrumGraph3D.qml  WaterfallGraph.qml  WaterfallGraphLabels.qml  WaterfallGraphOverlayBands.qml
qml/popups/: PopupClearDeviceCache.qml  PopupClearDeviceSeenCache.qml  PopupClearDeviceStructureCache.qml  PopupExportDeviceData.qml  PopupExportScannerData.qml  PopupWriteCharacteristic.qml
qml/settings/: SettingsAdvertiser.qml  SettingsApp.qml  SettingsCredits.qml  SettingsInfo.qml  SettingsScanner.qml  SettingsSpectrum.qml
qml/widgets/: AdapterWidget.qml  AdvertisementDataWidget.qml  AdvertisementDataWidgetAdvanced.qml  BleCharacteristicWidget.qml  BleServiceWidget.qml  DeviceLogWidget.qml
src/: BleCharacteristicInfo.cpp  BleCharacteristicInfo.h  BleServiceInfo.cpp  BleServiceInfo.h  ColormapFactory.cpp  ColormapFactory.h  DatabaseManager.cpp  DatabaseManager.h  DeviceAdvModel.cpp  DeviceAdvModel.h  DeviceFilter.cpp  DeviceFilter.h  DeviceHeader.h  DeviceLogModel.cpp  DeviceLogModel.h  DeviceManager.cpp  DeviceManager.h  DeviceManager_advertisement.cpp  DeviceManager_rssigraph.cpp  MenubarManager.cpp  MenubarManager.h  PhosphorPersistenceGraph_QuickItem.cpp  PhosphorPersistenceGraph_QuickItem.h  SettingsManager.cpp  SettingsManager.h  SpectrumGraph3D_SurfaceHandler.cpp  SpectrumGraph3D_SurfaceHandler.h  SpectrumSource.cpp  SpectrumSource.h  VendorsDatabase.cpp  VendorsDatabase.h  WaterfallGraph_QuickItem.cpp  WaterfallGraph_QuickItem.h  adapter.cpp  adapter.h  characteristicinfo.cpp  characteristicinfo.h  device.cpp  device.h  device_toolblex.cpp  (+13 more)
